# rgpr_steamworks

./: .gitignore  Cargo.toml  README.md
examples/: callback.rs  hello_world.rs  pain.rs
rgpr_steamworks/: Cargo.toml  README.md
rgpr_steamworks.old/: Cargo.old.toml
rgpr_steamworks.old/examples/: simple.rs
rgpr_steamworks.old/src/: call.rs  lib.rs
rgpr_steamworks.old/src/steam_api/: apps.rs  matchmaking.rs  mod.rs  user_stats.rs
rgpr_steamworks/src/: call.rs  config.rs  dt.rs  encrypted_app_ticket.rs  error.rs  lib.rs  util.rs
rgpr_steamworks/src/interfaces/: apps.rs  mod.rs
rgpr_steamworks/src/net/: mod.rs
rgpr_steamworks/src/steam_api/: apps.rs  friends.rs  matchmaking.rs  user.rs  user_stats.rs
rgpr_steamworks_bindgen/: Cargo.toml  README.md
rgpr_steamworks_bindgen/src/: lib.rs
rgpr_steamworks_macros/: Cargo.toml
rgpr_steamworks_macros/src/: callback.rs  internal.rs  lib.rs  sys.rs
rgpr_steamworks_sys/: Cargo.toml  README.md  build.rs
rgpr_steamworks_sys/lib/: README.md
rgpr_steamworks_sys/lib/steamworks_sdk/headers/: steam_api_flat.h
rgpr_steamworks_sys/lib/steamworks_sdk/headers/steam/: steamhttpenums.h
rgpr_steamworks_sys/src/: lib.rs
rgpr_steamworks_sys/src/bindings/: linux.rs  windows.rs
spacewar/: Cargo.toml
spacewar/src/: main.rs
src/: call.rs  config.rs  dt.rs  encrypted_app_ticket.rs  error.rs  iter.rs  lib.rs  prelude.rs  steam.rs  util.rs
src/interfaces/: apps.rs  client.rs  friends.rs  mod.rs  utils.rs
src/interfaces/friends/: mod.rs  rich_presence.rs
src/net/: mod.rs
src/util/: internal.rs  mod.rs
