[package]
name = "rgpr_steamworks"
version = "0.3.0"
edition = "2021"
exclude = ["rgpr_steamworks_sys", ".github", ".idea", "rustfmt.toml"]
repository.workspace = true
rust-version = "1.84.0"

[workspace]
resolver = "2"
members = [
    "rgpr_steamworks_sys"
]

[workspace.package]
repository = "https://github.com/Cryotheus/rgpr_steamworks/"

[features]
default = ["steam_apps", "steam_friends"]
sys = []

#steam interfaces to initialize
steam_apps = [] #available with game_server
steam_client = ["dep:lru"] #available with game_server
steam_friends = []
steam_game_coordinator = []
steam_game_server = [] #game server only
steam_game_server_stats = [] #game server only
steam_html = ["dep:image"]
steam_http = [] #available with game_server
steam_input = []
steam_inventory = []
steam_networking = [] #available with game_server
steam_match_making = []
steam_match_making_servers = []
steam_music_remote = []
steam_music = []
steam_parental_settings = []
steam_parties = []
steam_remote_play = []
steam_remote_storage = []
steam_screenshots = []
steam_timeline = []
steam_ugc = [] #available with game_server
steam_user = []
steam_user_stats = []
steam_utils = [] #available with game_server
steam_video = []

#enable the encrypted_app_ticket module for DRM authentication using a trusted server
steam_encrypted_app_ticket = []

[dependencies]
bitflags = "2.7.0"
futures = "0.3.31"
image = { version = "0.25.5", optional = true }
lru = { version = "0.12.5", optional = true }
rgpr_steamworks_sys = { path = "rgpr_steamworks_sys" }
static_assertions = "1.1.0"
thiserror = "2.0.11"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[package.metadata.example.hello_world]
hidden = true
