[package]
name = "rgpr_steamworks"
version = "0.3.0"
edition = "2021"
exclude = ["rgpr_steamworks_sys", ".github", ".idea", "rustfmt.toml"]
repository.workspace = true
rust-version = "1.84.0"

[workspace]
resolver = "2"
members = ["rgpr_steamworks_sys"]

[workspace.package]
repository = "https://github.com/Cryotheus/rgpr_steamworks/"

[features]
default = ["steam"]
steam = ["dep:futures"]
sys = []

#steam interfaces to initialize
steam_apps = ["steam", "dep:bitflags"] #available with game_server
steam_client = ["steam"] #available with game_server
steam_friends = ["steam", "dep:lru", "dep:bitflags"]
steam_game_coordinator = ["steam"]
steam_game_server = ["steam"] #game server only
steam_game_server_stats = ["steam"] #game server only
steam_html = ["steam", "dep:image"]
steam_http = ["steam"] #available with game_server
steam_input = ["steam"]
steam_inventory = ["steam"]
steam_networking = ["steam"] #available with game_server
steam_match_making = ["steam"]
steam_match_making_servers = ["steam"]
steam_music_remote = ["steam"]
steam_music = ["steam"]
steam_parental_settings = ["steam"]
steam_parties = ["steam"]
steam_remote_play = ["steam"]
steam_remote_storage = ["steam"]
steam_screenshots = ["steam"]
steam_timeline = ["steam"]
steam_ugc = ["steam"] #available with game_server
steam_user = ["steam"]
steam_user_stats = ["steam"]
steam_utils = ["steam"] #available with game_server
steam_video = ["steam"]

#enable the encrypted_app_ticket module for DRM authentication using a trusted server
#the steam feature is not required
#has its own dylib to ship alongside, see README.md # Building
steam_encrypted_app_ticket = []

[dependencies]
bitflags = { version = "2.7.0", optional = true }
cfg-if = "1.0.0"
futures = { version = "0.3.31", optional = true }
image = { version = "0.25.5", optional = true }
lru = { version = "0.12.5", optional = true }
rgpr_steamworks_sys = { path = "rgpr_steamworks_sys" }
static_assertions = "1.1.0"
thiserror = "2.0.11"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
required-features = ["steam_apps"]

[package.metadata.example.hello_world]
hidden = true
