[package]
name = "rgpr_steamworks_macros"
version = "0.1.0"
edition = "2024"
repository.workspace = true

[features]
default = []
internal = []

[dependencies]
cfg-if = "1.0.0"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["visit-mut", "full", "extra-traits"] }

[lib]
crate-type = ["proc-macro"]
