[package]
name = "rgpr_steamworks_sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"
repository.workspace = true

[lib]
doc = false
doctest = false

[build-dependencies]
bindgen = "0.71.1"

[target.'cfg(all(target_os = "linux", target_pointer_width = "64"))'.build-dependencies]
prettyplease = { version = "0.2.27", features = ["verbatim"] }
syn = { version = "2.0.95", features = ["fold", "extra-traits"] }

[features]
default = []
generate_bindings = [] #for running bindgen on the steamworks headers
