[package]
name = "rgpr_steamworks_sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"
repository.workspace = true
include = ["/lib"]
exclude = ["/lib/README.md", "/lib/steamworks_sdk/headers/steam_api.json"]

[lib]
doctest = false

[build-dependencies]
rgpr_steamworks_bindgen = { path = "../rgpr_steamworks_bindgen" }

[target.'cfg(all(target_os = "linux", target_pointer_width = "64"))'.build-dependencies]
prettyplease = { version = "0.2.27", features = ["verbatim"] }
syn = { version = "2.0.95", features = ["fold", "extra-traits"] }

[features]
default = []

#include the dylib for encrypted app tickets as well
#TODO: put app ticket bindings into its own module
sdk_encrypted_app_ticket = []

#regenerate the bindings file for the target OS
generate_bindings = []
